# otacon

./: .env.example  .envrc  .gitignore  Dockerfile.gnirehtet  Dockerfile.otacon  Dockerfile.phone-mirror  Makefile  README.md  devbox.json  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.changeset/: vnc-to-rdp.md
.github/workflows/: build-android.yml  build-docker.yml  build-pigen.yml  release.yml
android/device-owner/: settings.gradle.kts
android/device-owner/app/: build.gradle.kts
ansible/: ansible.cfg  site.yml
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml
config/: bluetooth-main.conf  pulseaudio-bluetooth.pa  sesman.ini  supervisord-base.conf  supervisord-bluetooth.conf  supervisord-phone-mirror.conf  xrdp.ini
docs/: audio-connection.md  device-owner.md
pigen/: build.sh  config
pigen/otacon/: startup.conf.example
pigen/stage-otacon/00-install-docker/: 00-run.sh
pigen/stage-otacon/00-run-ansible/: 00-run.sh
pigen/stage-otacon/01-first-boot/: 00-run.sh
scripts/: bluetooth-agent.py  bluetooth-connect.sh  bluetooth-monitor.sh  bluetooth-pair.sh  bluetooth-status.sh  bootstrap.sh  bt-reconnect.py  deploy.sh  gnirehtet-entrypoint.sh  health-check.sh  otacon-entrypoint.sh  phone-mirror-entrypoint.sh  phone-reset.sh  phone-setup.sh
src/cli/: package-lock.json  package.json
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/api/: action.rs  adb.rs  apps.rs  contacts.rs  device.rs  mod.rs  screenshot.rs  sms.rs  snapshot.rs
src/server/static/: index.html
(+18 files in other folders)
